# CFD

./: .gitignore
Barba_CFD_Module/: README.md
Barba_CFD_Module/step1_linear_convection/: .gitignore  CMakeLists.txt  README.md
Barba_CFD_Module/step1_linear_convection/src/: main  main.cpp
Barba_CFD_Module/step1_linear_convection/src/output_data/: 04Jul2023_data.csv
Barba_CFD_Module/step1_linear_convection/src/python_plotting/: plotting.py
Barba_CFD_Module/step1_linear_convection/src/supplemental_files/: CMakeLists.txt  supplemental_files.cpp  supplemental_files.hpp
Barba_CFD_Module/step2_nonlinear_convection/: .gitignore  CMakeLists.txt
Barba_CFD_Module/step2_nonlinear_convection/src/: main.cpp
Barba_CFD_Module/step3_diffusion_equation/: CMakeLists.txt
Barba_CFD_Module/step3_diffusion_equation/src/: main.cpp
Barba_CFD_Module/step3_diffusion_equation/src/output_data/: 06Jul2023_data.csv
Barba_CFD_Module/step3_diffusion_equation/src/python_plotting/: plotting.py
Barba_CFD_Module/step5_linear_convection/: CMakeLists.txt  README.md
Barba_CFD_Module/step5_linear_convection/src/: main.cpp
Barba_CFD_Module/step5_linear_convection/src/output_data/: 09Jul2023_data.csv
Barba_CFD_Module/step5_linear_convection/src/python_plotting/: plotting.py
NavierStokes/: CMakeLists.txt
NavierStokes/src/: main.cpp  simulation_parameters.hpp
NavierStokes/src/plotting/: main_plotting.py
NavierStokes/src/simulation/: simulation.cpp  simulation.hpp
NavierStokes/test/: CMakeLists.txt
NavierStokes/test/test_simulation/: CMakeLists.txt  test_simulation.cpp
(+3 files in other folders)
